--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,11 @@ body{
 .navlink  .active {
     color:#0E7A81;
 }
+
+/* .custom-clip {
+    clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 100%, 0 100%);
+  } */
+
+  .custom-clip {
+    clip-path: polygon(0 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
+  }
