--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,6 @@ body{
     clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 100%, 0 100%);
   } */
 
-  .custom-clip {
+  /* .custom-clip {
     clip-path: polygon(0 0, 100% 0, calc(100% - 20px) 100%, 0 100%);
-  }
+  } */
